<resources>
    <string name="app_name">Scheduler</string>
    <string name="new_button">New</string>
    <string name="reminder_default_timing_string">1:00 AM - 2:00 AM</string>
    <string name="reminder_default_title_string">Title</string>
    <string name="to_do_default_action_string">Text of job here</string>
    <string name="to_do_list_empty_msg">Live, Love, Laugh</string>
    <string name="event_list_empty_msg">It is okay to breathe and enjoy things around you once in a while.</string>
    <string name="event_title">Event Title</string>
    <string name="agenda">Agenda</string>
    <string name="starts">Starts</string>
    <string name="ends">Ends</string>
    <string name="people">People</string>
    <string name="link">Link</string>
    <string name="location">Location</string>
    <string name="reminder">Reminder</string>
    <string name="events">Events</string>
    <string name="reminders">Reminders</string>
    <string name="next">next</string>
    <string name="to_do">To Do</string>
    <string name="today">Today</string>
    <string name="reminder_details_string">Details of event here</string>
    <string name="reminder_details_location_string">Location of event here</string>
    <string name="reminder_details_links_string">Links of event here</string>
    <string name="reminder_details_users_string">Users in the event here</string>
    <string name="date">Date</string>
    <string name="_06_00_am">06:00 AM</string>
    <string name="to">to</string>
    <string name="time">Time</string>
    <string name="may">MAY</string>
    <string name="add">add</string>
    <string name="done">Done</string>
    <string name="end_time">end time</string>
    <string name="start_time">start time</string>
</resources>