<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1D1D1F"
    android:orientation="vertical">

    <TextView
        android:id="@+id/event_new_done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:fontFamily="@font/roboto"
        android:text="@string/done"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:textSize="18sp"
        android:textColor="?attr/colorSecondary"/>

    <EditText
        android:id="@+id/editText_fragmentEventsNew_eventTitle"
        style="@style/text_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#FFFFFF"
        android:hint="@string/event_title"
        android:inputType="text"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="@string/event_title" />

    <EditText
        android:id="@+id/editText_fragmentEventsNew_agenda"
        style="@style/text_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#FFFFFF"
        android:hint="@string/agenda"
        android:inputType="text"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText_fragmentEvents_eventTitle"
        android:autofillHints="@string/agenda" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editText_fragmentEventsNew_starts"
            style="@style/text_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="#FFFFFF"
            android:hint="@string/time"
            android:ems="10"
            android:inputType="number"
            android:textColorHint="#FFFFFF"
            android:autofillHints="@string/starts" />

        <TextView
            android:id="@+id/textView_newEventFragmentFrom"
            style="@style/text_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="128dp"
            android:layout_marginTop="16dp"
            android:text="@string/_06_00_am"
            android:textColor="#808080" />

        <TextView
            android:id="@+id/textView_newEventFragmentToText"
            style="@style/text_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/textView_newEventFragmentFrom"
            android:layout_alignParentTop="true"
            android:layout_marginTop="16dp"
            android:text="@string/to"
            android:layout_marginStart="10dp"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textView_newEventFragmentTo"
            style="@style/text_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/textView_newEventFragmentToText"
            android:layout_alignParentTop="true"
            android:layout_marginTop="16dp"
            android:text="@string/_06_00_am"
            android:layout_marginStart="10dp"
            android:textColor="#808080" />

    </RelativeLayout>


    <EditText
        android:id="@+id/editText_fragmentEventsNew_date"
        style="@style/text_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#FFFFFF"
        android:hint="@string/date"
        android:ems="10"
        android:inputType="date"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText_fragmentEvents_starts"
        android:autofillHints="@string/ends" />

    <EditText
        android:id="@+id/editText_fragmentEventsNew_people"
        style="@style/text_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#FFFFFF"
        android:hint="@string/people"
        android:inputType="text"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText_fragmentEvents_ends"
        android:autofillHints="@string/people" />

    <EditText
        android:id="@+id/editText_fragmentEventsNew_link"
        style="@style/text_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#FFFFFF"
        android:hint="@string/link"
        android:inputType="text"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText_fragmentEvents_people"
        android:autofillHints="@string/link" />

    <EditText
        android:id="@+id/editText_fragmentEventsNew_location"
        style="@style/text_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#FFFFFF"
        android:hint="@string/location"
        android:inputType="text"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText_fragmentEvents_link"
        android:autofillHints="@string/location" />

</LinearLayout>