<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageView_editReminder"
        android:src="@drawable/ic_edit"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"/>

    <TextView
        android:id="@+id/textView_doneEditButton"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        style="@style/text_list"
        android:textColor="@color/white_hole"
        android:textStyle="bold"
        android:visibility="invisible"/>

    <EditText
        android:id="@+id/editText_reminderDetailsTitle"
        style="@style/text_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/reminder_default_title_string"
        android:textColor="@color/white_hole"
        android:textStyle="bold"
        android:inputType="none"/>

    <EditText
        android:id="@+id/editText_reminderTitleUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_reminderDetailsTitle"
        style="@style/text_list"
        android:textColor="@color/white_hole"
        android:text="@string/reminder_default_timing_string"
        android:layout_marginTop="50dp"
        android:layout_marginStart="16dp"
        android:inputType="none"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/editText_reminderDetailsStartTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_reminderTitleUpdate"
        style="@style/text_list"
        android:textColor="@color/white_hole"
        android:text="Start Time"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:inputType="none"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_reminderTitleUpdate"
        style="@style/text_list"
        android:textColor="@color/white_hole"
        android:text="-"
        android:layout_marginTop="25dp"
        android:layout_marginStart="110dp"/>

    <EditText
        android:id="@+id/editText_reminderDetailsEndTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_reminderTitleUpdate"
        style="@style/text_list"
        android:textColor="@color/white_hole"
        android:text="End Time"
        android:layout_marginTop="16dp"
        android:layout_marginStart="120dp"
        android:inputType="none"/>

    <EditText
        android:id="@+id/editText_reminderDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_reminderDetailsStartTime"
        android:layout_marginStart="16dp"
        style="@style/text_list"
        android:textColor="@color/white_hole"
        android:layout_marginTop="16dp"
        android:text="@string/reminder_details_string"
        android:inputType="none"/>

    <EditText
        android:id="@+id/editText_reminderDetailsLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_reminderDetails"
        android:layout_marginStart="16dp"
        style="@style/text_list"
        android:textColor="@color/white_hole"
        android:layout_marginTop="16dp"
        android:text="@string/reminder_details_location_string"
        android:inputType="none"/>

    <EditText
        android:id="@+id/editText_reminderDetailsLinks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_reminderDetailsLocation"
        android:layout_marginStart="16dp"
        style="@style/text_list"
        android:textColor="@color/blue_dark_008aff"
        android:layout_marginTop="16dp"
        android:text="@string/reminder_details_links_string"
        android:inputType="none"/>

    <EditText
        android:id="@+id/editText_reminderDetailsUsers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/blue_dark_008aff"
        android:layout_below="@+id/editText_reminderDetailsLinks"
        android:layout_marginStart="16dp"
        style="@style/text_list"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/reminder_details_users_string"
        android:inputType="none"/>

</RelativeLayout>